--- a/index.html
+++ b/index.html
@@ -1,149 +1,154 @@
-<html>
+<!doctype html>
+<html lang="en">
+    <head>
+        <!-- Required meta tags -->
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
+        <!-- CSS of Bootstrap-->
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 
-	<head>
-		<!-- CSS -->
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-		<link rel="stylesheet" type="text/css" href="css/styles.css">
+        <!-- local CSS file -->
+        <link rel="stylesheet" type="text/css" href="css/styles.css">
                 
-		<!-- Javascript -->
-		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-                <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-		<script src="js/table.js"></script>
+        <!-- Javascript of Bootstrap-->
+        <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
-	</head>
-	<body>
+        <!-- local Javascript file -->
+        <script src="js/table.js"></script>
 
-
-<!-- Code origin from MDBootstrap -  Editable table -->
-<div class="card">
-  <h3 class="card-header text-center font-weight-bold text-uppercase py-4">
-    Editable table
-  </h3>
-  <div class="card-body">
-    <div id="table" class="table-editable">
-      <span class="table-add float-right mb-3 mr-2"
-        ><a href="#!" class="text-success"
-          ><i class="fas fa-plus fa-2x" aria-hidden="true"></i></a
-      ></span>
-      <table class="table table-bordered table-responsive-md table-striped text-center">
-        <thead>
-          <tr>
-            <th class="text-center">Person Name</th>
-            <th class="text-center">Age</th>
-            <th class="text-center">Company Name</th>
-            <th class="text-center">Country</th>
-            <th class="text-center">City</th>
-            <th class="text-center">Sort</th>
-            <th class="text-center">Remove</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td class="pt-3-half" contenteditable="true">Aurelia Vega</td>
-            <td class="pt-3-half" contenteditable="true">30</td>
-            <td class="pt-3-half" contenteditable="true">Deepends</td>
-            <td class="pt-3-half" contenteditable="true">Spain</td>
-            <td class="pt-3-half" contenteditable="true">Madrid</td>
-            <td class="pt-3-half">
-              <span class="table-up"
-                ><a href="#!" class="indigo-text"
-                  ><i class="fas fa-long-arrow-alt-up" aria-hidden="true"></i></a
+    </head>
+    <body>
+        <!-- Code origin from MDBootstrap -  Editable table -->
+        <div class="card">
+          <h3 class="card-header text-center font-weight-bold text-uppercase py-4">
+            Editable table
+          </h3>
+          <div class="card-body">
+            <div id="table" class="table-editable">
+              <span class="table-add float-right mb-3 mr-2"
+                ><a href="#!" class="text-success"
+                  ><i class="fas fa-plus fa-2x" aria-hidden="true"></i></a
               ></span>
-              <span class="table-down"
-                ><a href="#!" class="indigo-text"
-                  ><i class="fas fa-long-arrow-alt-down" aria-hidden="true"></i></a
-              ></span>
-            </td>
-            <td>
-              <span class="table-remove"
-                ><button type="button" class="btn btn-danger btn-rounded btn-sm my-0">
-                  Remove
-                </button></span
-              >
-            </td>
-          </tr>
-          <!-- This is our clonable table line -->
-          <tr>
-            <td class="pt-3-half" contenteditable="true">Guerra Cortez</td>
-            <td class="pt-3-half" contenteditable="true">45</td>
-            <td class="pt-3-half" contenteditable="true">Insectus</td>
-            <td class="pt-3-half" contenteditable="true">USA</td>
-            <td class="pt-3-half" contenteditable="true">San Francisco</td>
-            <td class="pt-3-half">
-              <span class="table-up"
-                ><a href="#!" class="indigo-text"
-                  ><i class="fas fa-long-arrow-alt-up" aria-hidden="true"></i></a
-              ></span>
-              <span class="table-down"
-                ><a href="#!" class="indigo-text"
-                  ><i class="fas fa-long-arrow-alt-down" aria-hidden="true"></i></a
-              ></span>
-            </td>
-            <td>
-              <span class="table-remove"
-                ><button type="button" class="btn btn-danger btn-rounded btn-sm my-0">
-                  Remove
-                </button></span
-              >
-            </td>
-          </tr>
-          <!-- This is our clonable table line -->
-          <tr>
-            <td class="pt-3-half" contenteditable="true">Guadalupe House</td>
-            <td class="pt-3-half" contenteditable="true">26</td>
-            <td class="pt-3-half" contenteditable="true">Isotronic</td>
-            <td class="pt-3-half" contenteditable="true">Germany</td>
-            <td class="pt-3-half" contenteditable="true">Frankfurt am Main</td>
-            <td class="pt-3-half">
-              <span class="table-up"
-                ><a href="#!" class="indigo-text"
-                  ><i class="fas fa-long-arrow-alt-up" aria-hidden="true"></i></a
-              ></span>
-              <span class="table-down"
-                ><a href="#!" class="indigo-text"
-                  ><i class="fas fa-long-arrow-alt-down" aria-hidden="true"></i></a
-              ></span>
-            </td>
-            <td>
-              <span class="table-remove"
-                ><button type="button" class="btn btn-danger btn-rounded btn-sm my-0">
-                  Remove
-                </button></span
-              >
-            </td>
-          </tr>
-          <!-- This is our clonable table line -->
-          <tr class="hide">
-            <td class="pt-3-half" contenteditable="true">Elisa Gallagher</td>
-            <td class="pt-3-half" contenteditable="true">31</td>
-            <td class="pt-3-half" contenteditable="true">Portica</td>
-            <td class="pt-3-half" contenteditable="true">United Kingdom</td>
-            <td class="pt-3-half" contenteditable="true">London</td>
-            <td class="pt-3-half">
-              <span class="table-up"
-                ><a href="#!" class="indigo-text"
-                  ><i class="fas fa-long-arrow-alt-up" aria-hidden="true"></i></a
-              ></span>
-              <span class="table-down"
-                ><a href="#!" class="indigo-text"
-                  ><i class="fas fa-long-arrow-alt-down" aria-hidden="true"></i></a
-              ></span>
-            </td>
-            <td>
-              <span class="table-remove"
-                ><button type="button" class="btn btn-danger btn-rounded btn-sm my-0">
-                  Remove
-                </button></span
-              >
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
-</div>
-<!-- Editable table -->
-	</body>
-
+              <table class="table table-bordered table-responsive-md table-striped text-center">
+                <thead>
+                  <tr>
+                    <th class="text-center">Person Name</th>
+                    <th class="text-center">Age</th>
+                    <th class="text-center">Company Name</th>
+                    <th class="text-center">Country</th>
+                    <th class="text-center">City</th>
+                    <th class="text-center">Sort</th>
+                    <th class="text-center">Remove</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td class="pt-3-half" contenteditable="true">Aurelia Vega</td>
+                    <td class="pt-3-half" contenteditable="true">30</td>
+                    <td class="pt-3-half" contenteditable="true">Deepends</td>
+                    <td class="pt-3-half" contenteditable="true">Spain</td>
+                    <td class="pt-3-half" contenteditable="true">Madrid</td>
+                    <td class="pt-3-half">
+                      <span class="table-up"
+                        ><a href="#!" class="indigo-text"
+                          ><i class="fas fa-long-arrow-alt-up" aria-hidden="true"></i></a
+                      ></span>
+                      <span class="table-down"
+                        ><a href="#!" class="indigo-text"
+                          ><i class="fas fa-long-arrow-alt-down" aria-hidden="true"></i></a
+                      ></span>
+                    </td>
+                    <td>
+                      <span class="table-remove"
+                        ><button type="button" class="btn btn-danger btn-rounded btn-sm my-0">
+                          Remove
+                        </button></span
+                      >
+                    </td>
+                  </tr>
+                  <!-- This is our clonable table line -->
+                  <tr>
+                    <td class="pt-3-half" contenteditable="true">Guerra Cortez</td>
+                    <td class="pt-3-half" contenteditable="true">45</td>
+                    <td class="pt-3-half" contenteditable="true">Insectus</td>
+                    <td class="pt-3-half" contenteditable="true">USA</td>
+                    <td class="pt-3-half" contenteditable="true">San Francisco</td>
+                    <td class="pt-3-half">
+                      <span class="table-up"
+                        ><a href="#!" class="indigo-text"
+                          ><i class="fas fa-long-arrow-alt-up" aria-hidden="true"></i></a
+                      ></span>
+                      <span class="table-down"
+                        ><a href="#!" class="indigo-text"
+                          ><i class="fas fa-long-arrow-alt-down" aria-hidden="true"></i></a
+                      ></span>
+                    </td>
+                    <td>
+                      <span class="table-remove"
+                        ><button type="button" class="btn btn-danger btn-rounded btn-sm my-0">
+                          Remove
+                        </button></span
+                      >
+                    </td>
+                  </tr>
+                  <!-- This is our clonable table line -->
+                  <tr>
+                    <td class="pt-3-half" contenteditable="true">Guadalupe House</td>
+                    <td class="pt-3-half" contenteditable="true">26</td>
+                    <td class="pt-3-half" contenteditable="true">Isotronic</td>
+                    <td class="pt-3-half" contenteditable="true">Germany</td>
+                    <td class="pt-3-half" contenteditable="true">Frankfurt am Main</td>
+                    <td class="pt-3-half">
+                      <span class="table-up"
+                        ><a href="#!" class="indigo-text"
+                          ><i class="fas fa-long-arrow-alt-up" aria-hidden="true"></i></a
+                      ></span>
+                      <span class="table-down"
+                        ><a href="#!" class="indigo-text"
+                          ><i class="fas fa-long-arrow-alt-down" aria-hidden="true"></i></a
+                      ></span>
+                    </td>
+                    <td>
+                      <span class="table-remove"
+                        ><button type="button" class="btn btn-danger btn-rounded btn-sm my-0">
+                          Remove
+                        </button></span
+                      >
+                    </td>
+                  </tr>
+                  <!-- This is our clonable table line -->
+                  <tr class="hide">
+                    <td class="pt-3-half" contenteditable="true">Elisa Gallagher</td>
+                    <td class="pt-3-half" contenteditable="true">31</td>
+                    <td class="pt-3-half" contenteditable="true">Portica</td>
+                    <td class="pt-3-half" contenteditable="true">United Kingdom</td>
+                    <td class="pt-3-half" contenteditable="true">London</td>
+                    <td class="pt-3-half">
+                      <span class="table-up"
+                        ><a href="#!" class="indigo-text"
+                          ><i class="fas fa-long-arrow-alt-up" aria-hidden="true"></i></a
+                      ></span>
+                      <span class="table-down"
+                        ><a href="#!" class="indigo-text"
+                          ><i class="fas fa-long-arrow-alt-down" aria-hidden="true"></i></a
+                      ></span>
+                    </td>
+                    <td>
+                      <span class="table-remove"
+                        ><button type="button" class="btn btn-danger btn-rounded btn-sm my-0">
+                          Remove
+                        </button></span
+                      >
+                    </td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </div>
+        </div>
+        <!-- Editable table -->
+    </body>
 </html>
